@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.147 2005/04/22 06:11:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.148 2005/04/23 17:09:43 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  23 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Fixed encapsulation issues in GLIClientController (bug #90141)
 
   22 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Update resizing code in GLIStorageDevice
